--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.18"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "mongoose": "^6.4.2"
   }
